--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,35 +5,35 @@ html{
     scroll-behavior: smooth;
 }
 body{
-    background-color: #7e7e3d;
+    background-color: #fff;
     background-image: url(../img/bkg7.jpg.webp);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 
-    font-size: 1.8rem;
+    font-size: 1.7rem;
     font-family: sans-serif;
     color: #000;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    /* min-height: 100vh; */
     padding: 3rem;
 }
 
 .container{
     background-color: #ffffffb4;
     width: calc(35rem + 8vw);
-    /* margin: 0 auto; */
     /* border: 2px solid yellow; */
     border-radius: 2.5rem;
-    /* overflow: hidden; */
+    overflow: hidden;
 
     padding: 2rem 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 10px;
+    gap: 1rem;
+    height: fit-content;
 }
 .info{
     display: flex;
@@ -43,8 +43,8 @@ body{
 .info img{
     width: 15rem;
     height: 15rem;
-    /* border: 2px solid yellow; */
     border-radius: 50%;
+    /* border: 2px solid yellow; */
 }
 .sobre{
     text-align: center;
@@ -71,14 +71,12 @@ a, li{
     padding: 1rem;
     /* opacity: 80%; */
 }
-.redes-sociais .linkdin{
-    /* padding-top: .5rem; */
+/* .redes-sociais .linkdin{
     display: block;
     width: 22rem;
     height: 4rem;
-    /* background-image: linear-gradient(#1e00ff, #00aaff); */
     background-color: #00aaffcd;
-}
+} */
 .redes-sociais .insta{
     display: block;
     width: 22rem;
