--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -12,7 +12,7 @@ html{
   3. Permitir alturas com base em porcentagem no aplicativo
 */
 html, body {
-  height: 100%;
+  height: 100vh;
 }
 /*
   Ajustes tipográficos!
