--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,6 @@
 :root{
     --border-radius: 25px;
+    --border: yellow;
 }
 @import url("rolagem.css");
 
@@ -13,20 +14,20 @@ body{
     background-size: cover;
     background-position: center;
 
-    font-size: 1.7rem;
+    font-size: 1.6rem;
     font-family: sans-serif;
     color: #000;
     display: flex;
     justify-content: center;
     align-items: center;
-    /* min-height: 100vh; */
+    min-height: 100vh;
     padding: 3rem;
 }
 
 .container{
     background-color: #ffffffb4;
     width: calc(35rem + 8vw);
-    /* border: 2px solid yellow; */
+    /* border: 2px solid var(--border); */
     border-radius: var(--border-radius);
     overflow: hidden;
 
@@ -46,7 +47,7 @@ body{
     width: 15rem;
     height: 15rem;
     border-radius: 50%;
-    /* border: 2px solid yellow; */
+    /* border: 2px solid var(--border); */
 }
 .sobre{
     text-align: center;
@@ -102,4 +103,19 @@ a, li{
 li a:hover{
     opacity: 0.7;
     transition: all .5s ease-out;
+}
+
+/* || Footer */
+.footer{
+    position: fixed;
+    bottom: 0;
+    opacity: 30%;
+    transition: all .5s ease-out;
+    font-size: .5rem;
+}
+.heart{
+    color: #f00;
+}
+.footer:hover{
+    opacity: 90%;
 }
