--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -31,7 +31,7 @@ body{
     border-radius: var(--border-radius);
     overflow: hidden;
 
-    padding: 2rem 1rem;
+    padding: 1rem 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -61,14 +61,41 @@ body{
 .sobre :nth-child(2){
     padding-bottom: 1rem;
 }
-.contatos{
-    text-align: center;
-}
 hr{
     width: 100%;
     opacity: 20%;
 }
-a, li{
+.contatos{
+    text-align: center;
+}
+.redes-sociais{
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+    max-height: 18rem;
+    overflow-y: auto;
+}
+.redes-sociais li a{
+    width: 22rem;
+    height: 3rem;
+    display: block;
+    color: #000;
+    align-items: center;
+    padding: .3rem;
+    font-size: 1.6rem;
+    border-radius: var(--border-radius);
+    transition: all .5s ease-out;
+    text-decoration: none;
+}
+ul{
+    padding: 0;
+}
+li{
+    list-style: none;
+}
+/* a, li{
     list-style: none;
     text-decoration: none;
     padding-top: .8rem;
@@ -76,15 +103,14 @@ a, li{
     font-weight: bold;
     color: #000;
     transition: all .5s ease-out;
-}
-.redes-sociais{
+} */
+/* .redes-sociais{
     padding: 1rem;
-    /* opacity: 80%; */
-}
-a{
+} */
+/* a{
     width: 22rem;
     height: 4rem;
-}
+} */
 /* .redes-sociais .linkdin{
     display: block;
     width: 22rem;
