sobre mim reajustado, retirado linha de link, e adicionado icones de link

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,6 @@
 :root{
     --border-radius: 25px;
-    --border: yellow;
+    --border: #fff;
 }
 @import url("rolagem.css");
 
@@ -57,6 +57,7 @@ body{
 }
 .sobre p{
     text-align: justify;
+    font-size: 1.5rem;
 }
 .sobre :nth-child(2){
     padding-bottom: 1rem;
@@ -67,43 +68,42 @@ hr{
 }
 .contatos{
     text-align: center;
-    width: 100%;
+    /* width: 100%; */
 }
 .redes-sociais{
     margin-top: 1rem;
     display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    align-items: center;
+    flex-direction: row;
+    gap: 2rem;
+    /* align-items: center; */
+    justify-content: center;
     max-height: 18rem;
     overflow-y: auto;
 }
 .redes-sociais li a{
     width: 22rem;
     height: 3rem;
-    display: block;
-    color: #000;
+    color: #f00;
     align-items: center;
     padding: .3rem;
     font-size: 1.6rem;
     border-radius: var(--border-radius);
     transition: all .5s ease-out;
 }
-/* .redes-sociais .linkdin{
-    display: block;
-    width: 22rem;
-    height: 4rem;
-    background-color: #00aaffcd;
-} */
+
 .redes-sociais .insta{
+    width: 5rem;
+    height: 5rem;
     display: block;
     /* background-image: linear-gradient(#c96c01, #6c007a); */
-    background-color: #f55308cd;
+    /* background-color: #f55308cd; */
 }
 .redes-sociais .whats{
+    width: 5rem;
+    height: 5rem;
     display: block;
     /* background-image: linear-gradient(#1aec2fdd, #147224); */
-    background-color: #1aec2fcd;
+    /* background-color: #1aec2fcd; */
 }
 
 /* || Efeitos de botoes, links */
