--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,7 +15,7 @@ body{
     background-position: center;
 
     font-size: 1.6rem;
-    font-family: sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #000;
     display: flex;
     justify-content: center;
@@ -30,6 +30,7 @@ body{
     /* border: 2px solid var(--border); */
     border-radius: var(--border-radius);
     overflow: hidden;
+    z-index: 1;
 
     padding: 1rem 1rem;
     display: flex;
@@ -57,7 +58,6 @@ body{
 }
 .sobre p{
     text-align: justify;
-    font-size: 1.5rem;
 }
 .sobre :nth-child(2){
     padding-bottom: 1rem;
@@ -108,8 +108,15 @@ hr{
 
 /* || Efeitos de botoes, links */
 li a:hover{
-    opacity: 0.7;
+    opacity: 0.5;
     transition: all .5s ease-out;
+    transform: scale(90%);
+}
+a:link{
+    color: #808080;
+}
+a:visited{
+    color: #000;
 }
 
 /* || Footer */
@@ -118,8 +125,8 @@ li a:hover{
     bottom: 0;
     opacity: 30%;
     transition: all .5s ease-out;
-    font-size: .5rem;
-    z-index: 1;
+    font-size: .4rem;
+    /* z-index: 1; */
 }
 .heart{
     color: #f00;
